
** `by' variables can now be factor variables.

** Argument `paraPen' of `gam' allows (multiple) penalization of 
   parametric model terms. This allows `gam' to fit any model that
   can be expressed as a penalized GLM.

** p-values returned by `summary.gam' now default to a Bayesian 
   approximation which gives (substantially) better frequentist behaviour 
   than the old method.

** The 2 standard error bands for smooths shown by `plot.gam' now
   include the uncertainty about the overall mean, by default. Such
   intervals have better coverage probability (of their target of 
   inference) than intervals for centred smooths. Argument 
   `type="iterms"' to `predict.gam' will return such standard errors.

** An adaptive smoother class has been added, for smoothing with respect
   to one or two variables: invoked with `s(...,bs="ad",...). 

** `gamm' now supports nested smooth terms, and uses the same, constraint 
   absorbed, parameterization as `gam'.

** `s' and `te' terms accept an `sp' argument setting the term specific 
   smoothing parameters (and over-riding argument `sp' of `gam'). Ignored
   by `gamm'.

** Negative binomial handling changed. `negbin' family added: adapted from 
   MASS to work with gam outer iteration fitting. `gam.negbin' fitting 
   routine added in order to enable use of `negbin' with outer iteration.
   See ?negbin for details. MASS families no longer supported. 
   `nb.theta.mult' removed from `gam.control'.

** The Eilers and Marx style p-spline class is now one of the default 
   smoothing classes, rather than just being an example of how to set up
   a class in the help file. cyclic versions are also available.

** `smoothCon' now handles `by' variables and centering constraints 
   automatically, removing the need for smooth constructors to do so.
   `PredMat' handles `by' variables automatically. Users can over-ride 
   this behaviour when adding smooth classes, if needed - see 
   documentation. 
