@@ -25,7 +25,7 @@
    approximation which gives (substantially) better frequentist behaviour 
    than the old method.
 
-** The 2 standard error bands for smooths shown by `plot.gam' now
+** The 2 standard error bands for smooths shown by `plot.gam' can now
    include the uncertainty about the overall mean, by default. Such
    intervals have better coverage probability (of their target of 
    inference) than intervals for centred smooths. Argument 
@@ -56,6 +56,10 @@
    `PredMat' handles `by' variables automatically. Users can over-ride 
    this behaviour when adding smooth classes, if needed - see 
    documentation. 
+
+** The interface for adding user defined smooths has been simplified, 
+   but this may mean that some user defined classes which worked before
+   no longer work: see ?user.defined.smooths
 
 * `smooth.construct' methods are now expected to set default values
    for the penalty order `p.order' and the basis dimension `bs.dim'
@@ -94,6 +98,11 @@
    the handling of linear functionals of smooths.
 
 * `gam.fit2' has been removed, since gam.fit3 is simply better.
+
+* The default optimizer for the generalized case has been made slightly 
+  more efficient (derivative free evaluation of GCV/AIC has been 
+  improved). The upshot is that the default is now faster than performance
+  iteration in almost all cases (while still being more reliable).
 
 * the `absorb.cons' option has been removed from `gam.control'.
 
